# garagem-thigs

garage/: db.sqlite3  pyproject.toml
garage/config/: settings.py  urls.py
garage/garagem/: admin.py  models.py  serializers.py  tests.py  views.py
garage/garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_acessorio.py  0004_cor.py  0005_veiculo.py
