
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "analauracpaiva", email = "analauracpaiva26@gmail.com"},
]
dependencies = [
    "django>=4.2.3",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
